# ai-agent-train

./: .env.example  .gitignore  README.md  ai  pyproject.toml
.wwebjs_cache/: 2.3000.1040225260.html
configs/: default.yml
data/logs/: cycle_0001.json  cycle_0002.json  cycle_0003.json  cycle_0004.json  cycle_0005.json  cycle_0006.json  cycle_0007.json  cycle_0008.json  cycle_0009.json  cycle_0010.json  cycle_0011.json  cycle_0012.json  cycle_0013.json  cycle_0014.json  cycle_0015.json  cycle_0016.json  cycle_0017.json  cycle_0018.json  cycle_0019.json  cycle_0020.json  cycle_0021.json  cycle_0022.json  cycle_0023.json  cycle_0024.json  cycle_0025.json  cycle_0026.json  cycle_0027.json  cycle_0028.json  cycle_0029.json  cycle_0030.json  cycle_0031.json  cycle_0032.json  cycle_0033.json  cycle_0034.json  cycle_0035.json  cycle_0036.json  cycle_0037.json  cycle_0038.json  cycle_0039.json  cycle_0040.json  (+1218 more)
data/training/chat_logs/: conversations.jsonl
data/training/cycle_0001/: generated.jsonl  high_quality.jsonl
data/training/cycle_0002/: generated.jsonl
data/training/cycle_0003/: generated.jsonl  high_quality.jsonl
data/training/cycle_0004/: generated.jsonl  high_quality.jsonl
data/training/cycle_0005/: generated.jsonl  high_quality.jsonl
data/training/cycle_0006/: generated.jsonl  high_quality.jsonl
data/training/cycle_0007/: generated.jsonl  high_quality.jsonl
data/training/cycle_0008/: generated.jsonl  high_quality.jsonl
docker/: Dockerfile  docker-compose.yml
scripts/: auto_push.sh  continuous_train.py  finetune_colab.py  run_training.sh  serve_and_train.py  telegram_bot.py  train_and_push.py  train_local.py
session/session/: DevToolsActivePort  Local State  SingletonCookie  SingletonLock  SingletonSocket
src/ai_agent/: __init__.py
whatsapp-bot/: index.js  package-lock.json  package.json
whatsapp-bot/.wwebjs_cache/: 2.3000.1040225260.html
(+3027 files in other folders)
