[project]
name = "ai-agent"
version = "0.1.0"
description = "Production-ready AI Coding Agent CLI"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "AI Agent Team"}]
readme = "README.md"

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "redis[hiredis]>=5.0.0",
    "litellm>=1.40.0",
    "chromadb>=0.5.0",
    "transformers>=4.41.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.3.0",
    "watchfiles>=0.22.0",
    "httpx>=0.27.0",
    "aiofiles>=23.2.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.2.0",
    "tenacity>=8.3.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-languages>=1.10.0",
    "gitpython>=3.1.43",
    "pygments>=2.18.0",
    "prompt-toolkit>=3.0.0",
    "orjson>=3.10.0",
    "numpy>=1.26.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
training = [
    "peft>=0.11.0",
    "datasets>=2.19.0",
    "accelerate>=0.31.0",
    "trl>=0.9.0",
    "bitsandbytes>=0.43.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
ai = "ai_agent.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_agent"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "ASYNC", "B", "SIM"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
